--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0315.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0315.html
@@ -142,9 +142,14 @@
             <ins title="nlp 2.00">Οὐμπερτόπουλος</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 722 441 948 509" lang="grc">
+        <span id="w_25_0" class="ocr_word" title="bbox 722 441 948 509">
           <span class="alternatives">
-            <ins title="nlp 2.00">(λογάσες</ins>
+            <ins class="alt" title="nlp 2.00">(λογάδες</ins>
+          </span>
+        </span>
+        <span id="w_25_1" class="ocr_word" title="bbox 722 441 948 509">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 996 448 1129 494" lang="grc">
@@ -160,11 +165,6 @@
         <span id="w_28" class="ocr_word" title="bbox 1398 466 1498 496" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_29" class="ocr_word" title="bbox 1536 457 1795 510" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιφανῶν</ins>
           </span>
         </span>
       </span>
@@ -283,9 +283,9 @@
             <ins class="alt" title="nlp 1.00">ἀλήθεια</ins>
           </span>
         </span>
-        <span id="w_53" class="ocr_word" title="bbox 1504 677 1795 746" lang="grc">
+        <span id="w_53_0" class="ocr_word" title="bbox 1504 677 1795 746">
           <span class="alternatives">
-            <ins title="nlp 2.00">επαρρησιάζετο.</ins>
+            <ins class="alt" title="nlp 2.00">ἐπαρρησιάζετο.</ins>
           </span>
         </span>
       </span>
@@ -557,19 +557,19 @@
             <ins class="alt" title="nlp 1.00">ὁπότερον</ins>
           </span>
         </span>
-        <span id="w_107" class="ocr_word" title="bbox 1259 1218 1326 1269" lang="grc">
+        <span id="w_107_0" class="ocr_word" title="bbox 1259 1218 1326 1269">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄν</ins>
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
+          </span>
+        </span>
+        <span id="w_107_1" class="ocr_word" title="bbox 1259 1218 1326 1269">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1362 1217 1657 1271" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπονεύσειε</ins>
-          </span>
-        </span>
-        <span id="w_109" class="ocr_word" title="bbox 1694 1240 1793 1270" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
       </span>
@@ -836,9 +836,14 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 224 1762 622 1811" lang="grc">
+        <span id="w_162_0" class="ocr_word" title="bbox 224 1762 622 1811">
           <span class="alternatives">
-            <ins title="nlp 2.00">Φιλιππούλιν</ins>
+            <ins class="alt" title="nlp 2.00">Φιλιππούπολιν</ins>
+          </span>
+        </span>
+        <span id="w_162_1" class="ocr_word" title="bbox 224 1762 622 1811">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_163" class="ocr_word" title="bbox 658 1761 955 1825" lang="grc">
@@ -864,11 +869,6 @@
         <span id="w_167" class="ocr_word" title="bbox 1696 1768 1786 1811" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_168" class="ocr_word" title="bbox 1807 1784 1849 1816">
-          <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -905,9 +905,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 1913 1784 1984">
-        <span id="w_175" class="ocr_word" title="bbox 101 1918 280 1977" lang="grc">
+        <span id="w_175_0" class="ocr_word" title="bbox 101 1918 280 1977">
           <span class="alternatives">
-            <ins title="nlp 2.00">δουχὸς</ins>
+            <ins class="alt" title="nlp 2.00">δουκὸς</ins>
+          </span>
+        </span>
+        <span id="w_175_1" class="ocr_word" title="bbox 101 1918 280 1977">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_176" class="ocr_word" title="bbox 323 1918 606 1984" lang="grc">
@@ -933,11 +938,6 @@
         <span id="w_180" class="ocr_word" title="bbox 1219 1934 1302 1965" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_181" class="ocr_word" title="bbox 1343 1916 1784 1980" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σεβαστοκράτορος</ins>
           </span>
         </span>
       </span>
@@ -1427,24 +1427,24 @@
             <ins class="alt" title="nlp 1.00">ἅπαντας]</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 909 2792 1103 2847">
+        <span id="w_278_0" class="ocr_word" title="bbox 1132 2802 1326 2845">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὅπαντας ]</ins>
+            <ins class="alt" title="nlp 2.00">῾excidit</ins>
           </span>
         </span>
-        <span id="w_278" class="ocr_word" title="bbox 1132 2802 1326 2845">
+        <span id="w_278_1" class="ocr_word" title="bbox 1132 2802 1326 2845">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ excidit fortasse</ins>
+            <ins class="alt" title="nlp 2.00">fortasse</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 1359 2816 1466 2848" lang="grc">
+        <span id="w_279_0" class="ocr_word" title="bbox 1359 2816 1466 2848">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὺς</ins>
+            <ins class="alt" title="nlp 2.00">τοὺς</ins>
           </span>
         </span>
-        <span id="w_280" class="ocr_word" title="bbox 1499 2797 1724 2855" lang="grc">
+        <span id="w_279_1" class="ocr_word" title="bbox 1359 2816 1466 2848">
           <span class="alternatives">
-            <ins title="nlp 2.00">λογάδας'</ins>
+            <ins class="alt" title="nlp 2.00">λογάδας᾿</ins>
           </span>
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1757 2813 1777 2840">
@@ -1478,12 +1478,7 @@
       <span class="ocr_line" title="bbox 1462 2926 1523 2967">
         <span id="w_286_0" class="ocr_word" title="bbox 1462 2926 1523 2967">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">2</ins>
-          </span>
-        </span>
-        <span id="w_286_1" class="ocr_word" title="bbox 1462 2926 1523 2967">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">*</ins>
+            <ins class="alt" title="nlp 2.00">2*</ins>
           </span>
         </span>
       </span>
