Testing commit.coffee

--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0505.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0505.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 701 195 1819 260">
         <span id="w_0" class="ocr_word" title="bbox 701 195 1029 241">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ΑΙ^ΕΧΙΑΟΙδ</ins>
+            <ins title="nlp 2.00">ALEXIADIS</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1062 198 1171 242">
@@ -1571,8 +1571,7 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 578 2978 630 3010">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II,</ins>
-            <del title="nlp 0.90">II,</del>
+            <ins title="nlp 2.00">II.</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1500 2967 1552 3005">
