--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0407.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0407.html
@@ -12,12 +12,12 @@
       <span class="ocr_line" title="bbox 723 142 1793 206">
         <span id="w_0" class="ocr_word" title="bbox 723 142 1047 188">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ΑΙ.ΕΧ1ΑΟΙ8</ins>
+            <ins title="nlp 2.00">ALEXIADIS</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1077 146 1141 190" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">Π</ins>
+            <ins title="nlp 2.00">XI</ins>
           </span>
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1171 153 1197 191">
