--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0073.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0073.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 720 179 1803 234">
         <span id="w_0" class="ocr_word" title="bbox 720 179 1043 224">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ΑΙ.ΕΧΙΑΒΙ8</ins>
+            <ins title="nlp 2.00">ALEXIADIS</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1075 181 1096 223">
