--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0539.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0539.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 699 195 1800 260">
         <span id="w_0" class="ocr_word" title="bbox 699 195 1022 242">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ΑΕΕΧΙΑ0Ι8</ins>
+            <ins title="nlp 2.00">ALEXIADIS</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1054 198 1160 243">
