--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0187.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0187.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 735 184 1813 243">
         <span id="w_0" class="ocr_word" title="bbox 735 184 1056 231">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ΑΙ^ΕΧΙΑΟΙδ</ins>
+            <ins title="nlp 2.00">ALEXIADIS</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1091 186 1128 230">
@@ -866,7 +866,7 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1629 1712 1817 1780" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἑώρρων</ins>
+            <ins title="nlp 2.00">ἑώρρων</ins>
           </span>
         </span>
       </span>
@@ -1457,7 +1457,7 @@
         </span>
         <span id="w_282" class="ocr_word" title="bbox 1596 2754 1646 2793">
           <span class="alternatives">
-            <ins title="nlp 2.00">18 εὐρηκότες</ins>
+            <ins title="nlp 2.00">εὐρηκότες</ins>
           </span>
         </span>
       </span>
