--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0479.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0479.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 715 175 1818 232">
         <span id="w_0" class="ocr_word" title="bbox 715 175 1038 221">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΑΙΕΧΙΑϋΙδ</ins>
+            <ins title="nlp 2.00">ALEXIADIS</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1071 176 1183 220">
