--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0045.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0045.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 778 183 1823 239">
         <span id="w_0" class="ocr_word" title="bbox 778 183 1099 228">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ΑΙ,ΕΧΤΑϋΙδ</ins>
+            <ins title="nlp 2.00">ALEXIADIS</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1131 184 1152 226">
@@ -1431,7 +1431,7 @@
         </span>
         <span id="w_276_0" class="ocr_word" title="bbox 808 2720 956 2788">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἀνὴρ</ins>
+            <ins class="alt" title="nlp 2.00">ἀνὴρ</ins>
           </span>
         </span>
         <span id="w_276_1" class="ocr_word" title="bbox 808 2720 956 2788">
