--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0305.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0305.html
@@ -404,11 +404,6 @@
             <ins class="alt" title="nlp 2.00">ἀμφιρύκῳ</ins>
           </span>
         </span>
-        <span id="w_75_1" class="ocr_word" title="bbox 735 916 999 986">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_76" class="ocr_word" title="bbox 1046 921 1198 970" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πλοίῳ</ins>
@@ -1434,7 +1429,7 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1052 2821 1078 2860">
           <span class="alternatives">
-            <ins title="nlp 2.00">8 ‘malim </ins>
+            <ins title="nlp 2.00">‘malim </ins>
           </span>
         </span>
         <span id="w_279_0" class="ocr_word" title="bbox 1321 2822 1507 2860">
@@ -1459,11 +1454,6 @@
             <ins class="alt" title="nlp 2.00">῾lege</ins>
           </span>
         </span>
-        <span id="w_283_1" class="ocr_word" title="bbox 132 2873 256 2929">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_284_0" class="ocr_word" title="bbox 287 2870 396 2930">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">γὰρ᾿</ins>
@@ -1476,7 +1466,7 @@
         </span>
         <span id="w_286" class="ocr_word" title="bbox 566 2878 620 2918">
           <span class="alternatives">
-            <ins title="nlp 2.00">28 προξενίσειαν (S) </ins>
+            <ins title="nlp 2.00">προξενίσειαν (S) </ins>
           </span>
         </span>
       </span>
