--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0306.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0306.html
@@ -702,11 +702,6 @@
             <ins class="alt" title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
-        <span id="w_135_1" class="ocr_word" title="bbox 1035 1467 1105 1519">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_136" class="ocr_word" title="bbox 1153 1467 1529 1536" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀκροβολισμῶν</ins>
@@ -1285,14 +1280,14 @@
             <ins class="alt" title="nlp 1.00">θᾶττον</ins>
           </span>
         </span>
-        <span id="w_249" class="ocr_word" title="bbox 1677 2579 1708 2622" lang="grc">
+        <span id="w_249_0" class="ocr_word" title="bbox 1677 2579 1708 2622">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἤ</ins>
+            <ins class="alt" title="nlp 2.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_250" class="ocr_word" title="bbox 1747 2556 1885 2623" lang="grc">
+        <span id="w_249_1" class="ocr_word" title="bbox 1677 2579 1708 2622">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγος</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
