--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0173.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0173.html
@@ -948,16 +948,16 @@
             <ins class="alt" title="nlp 1.00">αὐτοκράτορος</ins>
           </span>
         </span>
-        <span id="w_184" class="ocr_word" title="bbox 1671 1873 1780 1904" lang="grc">
+        <span id="w_184_0" class="ocr_word" title="bbox 1671 1873 1780 1904">
           <span class="alternatives">
-            <ins title="nlp 2.00">ποι-</ins>
+            <ins class="alt" title="nlp 2.00">ποικιλώτερά</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 39 1927 1782 1998">
         <span id="w_185" class="ocr_word" title="bbox 91 1930 325 1997" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κιλώτερά</ins>
+            <ins title="nlp 2.00">c</ins>
           </span>
         </span>
         <span id="w_186" class="ocr_word" title="bbox 372 1950 420 1980" lang="grc">
