--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0307.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0307.html
@@ -110,11 +110,6 @@
             <ins class="alt" title="nlp 2.00">ἣν</ins>
           </span>
         </span>
-        <span id="w_18_1" class="ocr_word" title="bbox 1041 397 1108 440">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_19" class="ocr_word" title="bbox 1150 376 1353 440" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φθάσας</ins>
@@ -362,19 +357,19 @@
             <ins class="alt" title="nlp 2.00">περιαθρεῖν</ins>
           </span>
         </span>
-        <span id="w_68_1" class="ocr_word" title="bbox 880 845 1174 906">
+        <span id="w_69_0" class="ocr_word" title="bbox 1202 861 1255 891">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_69" class="ocr_word" title="bbox 1202 861 1255 891" lang="grc">
+        <span id="w_69_1" class="ocr_word" title="bbox 1202 861 1255 891">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins class="alt" title="nlp 2.00">ὁρώμενον,</ins>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1282 840 1548 907" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁρώμενον,</ins>
+            <ins title="nlp 2.00">ἀποσπὰς</ins>
           </span>
         </span>
       </span>
@@ -1064,11 +1059,6 @@
         <span id="w_205_0_0" class="ocr_word" title="bbox 399 2178 486 2223">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">μετ᾿</ins>
-          </span>
-        </span>
-        <span id="w_205_0_1" class="ocr_word" title="bbox 399 2178 486 2223">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_205_1" class="ocr_word" title="bbox 399 2178 486 2223">
