--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0174.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0174.html
@@ -99,9 +99,14 @@
             <ins class="alt" title="nlp 1.00">διεληλυθώς</ins>
           </span>
         </span>
-        <span id="w_17" class="ocr_word" title="bbox 1268 376 1441 445" lang="grc">
+        <span id="w_17_0" class="ocr_word" title="bbox 1268 376 1441 445">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὀγδόη</ins>
+            <ins class="alt" title="nlp 2.00">(</ins>
+          </span>
+        </span>
+        <span id="w_17_1" class="ocr_word" title="bbox 1268 376 1441 445">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὀγδόη</ins>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1480 376 1530 426" lang="grc">
@@ -435,14 +440,14 @@
             <ins class="alt" title="nlp 1.00">ἐπέτρεψε</ins>
           </span>
         </span>
-        <span id="w_82" class="ocr_word" title="bbox 741 1001 916 1066" lang="grc">
+        <span id="w_83_0" class="ocr_word" title="bbox 955 1002 1009 1049">
           <span class="alternatives">
-            <ins title="nlp 2.00">κόμης</ins>
+            <ins class="alt" title="nlp 2.00">(κόμης</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 955 1002 1009 1049" lang="grc">
+        <span id="w_83_1" class="ocr_word" title="bbox 955 1002 1009 1049">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
+            <ins class="alt" title="nlp 2.00">δέ</ins>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 1049 1004 1192 1059" lang="grc">
