--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0454.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0454.html
@@ -158,9 +158,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 594 560 830 624" lang="grc">
+        <span id="w_28_0" class="ocr_word" title="bbox 594 560 830 624">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μιχαὴλ ,</ins>
+            <ins class="alt" title="nlp 2.00">Mιχαήλ,</ins>
+          </span>
+        </span>
+        <span id="w_28_1" class="ocr_word" title="bbox 594 560 830 624">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 881 558 906 609" lang="grc">
@@ -201,11 +206,6 @@
         <span id="w_36" class="ocr_word" title="bbox 1666 567 1811 623" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄλλος</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 1848 583 1877 613">
-          <span class="alternatives">
-            <ins title="nlp 2.00">*</ins>
           </span>
         </span>
       </span>
@@ -346,16 +346,11 @@
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1638 798 1875 858" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιλήψε-</ins>
+            <ins title="nlp 2.00">ἐπιλήψεσθαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 171 868 1877 937">
-        <span id="w_65" class="ocr_word" title="bbox 171 877 295 921" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σθαι</ins>
-          </span>
-        </span>
         <span id="w_66" class="ocr_word" title="bbox 349 871 628 937" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σκήπτρων.</ins>
@@ -442,7 +437,7 @@
       <span class="ocr_line" title="bbox 104 1022 1874 1092">
         <span id="w_82" class="ocr_word" title="bbox 104 1028 417 1091" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 Ἐξαζηνοὶ</ins>
+            <ins title="nlp 2.00">Ἐξαζηνοὶ</ins>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 459 1026 783 1091" lang="grc">
@@ -1212,9 +1207,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_234" class="ocr_word" title="bbox 1678 2273 1865 2336" lang="grc">
+        <span id="w_234_0" class="ocr_word" title="bbox 1678 2273 1865 2336">
           <span class="alternatives">
-            <ins title="nlp 2.00">βασιλι-</ins>
+            <ins class="alt" title="nlp 2.00">βασθλικὸν</ins>
+          </span>
+        </span>
+        <span id="w_234_1" class="ocr_word" title="bbox 1678 2273 1865 2336">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_235" class="ocr_word" title="bbox 1888 2291 1933 2324">
@@ -1222,18 +1222,8 @@
             <ins title="nlp 2.00">ν.</ins>
           </span>
         </span>
-        <span id="w_236" class="ocr_word" title="bbox 1955 2291 1990 2323">
-          <span class="alternatives">
-            <ins title="nlp 2.00">2</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 161 2344 1864 2413">
-        <span id="w_237" class="ocr_word" title="bbox 161 2346 254 2396" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κὸν</ins>
-          </span>
-        </span>
         <span id="w_238" class="ocr_word" title="bbox 290 2345 485 2413" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θρόνον</ins>
@@ -1276,16 +1266,11 @@
         </span>
         <span id="w_246" class="ocr_word" title="bbox 1676 2347 1864 2412" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κουφό-</ins>
+            <ins title="nlp 2.00">κουφότητι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 163 2423 1918 2493">
-        <span id="w_247" class="ocr_word" title="bbox 163 2443 266 2488" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τητι</ins>
-          </span>
-        </span>
         <span id="w_248" class="ocr_word" title="bbox 304 2443 389 2474" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
