--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0310.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0310.html
@@ -252,11 +252,6 @@
             <ins class="alt" title="nlp 2.00">Δαλασσηνός.</ins>
           </span>
         </span>
-        <span id="w_46_1" class="ocr_word" title="bbox 555 691 895 755">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_47" class="ocr_word" title="bbox 973 697 1022 754" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐξ</ins>
@@ -274,12 +269,7 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1504 713 1605 742" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_51" class="ocr_word" title="bbox 1644 693 1890 757" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κομάνων</ins>
+            <ins title="nlp 2.00">τῶν Κομάνων B</ins>
           </span>
         </span>
       </span>
@@ -351,11 +341,6 @@
             <ins class="alt" title="nlp 2.00">Ῥωμαϊκὰς</ins>
           </span>
         </span>
-        <span id="w_65_1" class="ocr_word" title="bbox 692 847 965 914">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_66" class="ocr_word" title="bbox 1003 853 1260 916" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φάλαγγας</ins>
@@ -368,7 +353,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 1639 867 1724 898" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins title="nlp 2.00">τὸν αὐτοκράτορα</ins>
           </span>
         </span>
       </span>
@@ -608,11 +593,6 @@
             <ins class="alt" title="nlp 2.00">περισφίγξας</ins>
           </span>
         </span>
-        <span id="w_116_1" class="ocr_word" title="bbox 200 1316 520 1382">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_117" class="ocr_word" title="bbox 560 1336 651 1381" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -630,12 +610,7 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1139 1318 1392 1368" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκέλευσεν</ins>
-          </span>
-        </span>
-        <span id="w_121" class="ocr_word" title="bbox 1416 1314 1597 1382" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἠχῆσαι</ins>
+            <ins title="nlp 2.00">ἐκέλευσεν ἠχῆσαι σάλπιγγα.</ins>
           </span>
         </span>
       </span>
@@ -1201,16 +1176,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 195 2405 1934 2474">
-        <span id="w_234_0" class="ocr_word" title="bbox 195 2423 231 2451">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ᾠ</ins>
-          </span>
-        </span>
-        <span id="w_234_1" class="ocr_word" title="bbox 195 2423 231 2451">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_235_0" class="ocr_word" title="bbox 272 2405 486 2467">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ᾡ</ins>
@@ -1243,7 +1208,7 @@
         </span>
         <span id="w_240" class="ocr_word" title="bbox 1370 2406 1670 2472" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρήσασθαι.</ins>
+            <ins title="nlp 2.00">χρήσασθαι. τοῦτο D</ins>
           </span>
         </span>
       </span>
@@ -1377,9 +1342,9 @@
             <ins class="alt" title="nlp 2.00">Ῥωμαϊκῆς</ins>
           </span>
         </span>
-        <span id="w_267_1" class="ocr_word" title="bbox 1314 2638 1584 2705">
+        <span id="w_267_1_0" class="ocr_word" title="bbox 1314 2638 1584 2705">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">φάλαγγος</ins>
           </span>
         </span>
       </span>
