--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0455.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0455.html
@@ -646,16 +646,11 @@
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1615 1338 1815 1399" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μελετω-</ins>
+            <ins title="nlp 2.00">μελετωμένων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 112 1409 1881 1477">
-        <span id="w_124" class="ocr_word" title="bbox 112 1409 274 1474" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένων</ins>
-          </span>
-        </span>
         <span id="w_125" class="ocr_word" title="bbox 300 1423 467 1470" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συνεὶς</ins>
@@ -1430,9 +1425,9 @@
             <ins class="alt" title="nlp 1.00">ἔδοξαν</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 1663 2722 1808 2790" lang="grc">
+        <span id="w_275_0" class="ocr_word" title="bbox 1663 2722 1808 2790">
           <span class="alternatives">
-            <ins title="nlp 2.00">εὑρη-</ins>
+            <ins class="alt" title="nlp 2.00">εὑρηκέναι.</ins>
           </span>
         </span>
       </span>
@@ -1440,11 +1435,6 @@
         <span id="w_276" class="ocr_word" title="bbox 56 2835 92 2870">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_277" class="ocr_word" title="bbox 113 2805 269 2857" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κέναι.</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 344 2807 447 2858" lang="grc">
