--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0311.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0311.html
@@ -841,11 +841,6 @@
             <ins class="alt" title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
-        <span id="w_161_0_1" class="ocr_word" title="bbox 954 1771 1004 1819">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_161_1" class="ocr_word" title="bbox 954 1771 1004 1819">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἀμφορέως,</ins>
@@ -868,7 +863,7 @@
         </span>
         <span id="w_165" class="ocr_word" title="bbox 1617 1785 1793 1834" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀσκοῦ,</ins>
+            <ins title="nlp 2.00">ἀσκοῦ, 20</ins>
           </span>
         </span>
       </span>
@@ -1244,7 +1239,7 @@
         </span>
         <span id="w_237_1" class="ocr_word" title="bbox 1484 2387 1659 2437">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">οὐκ</ins>
           </span>
         </span>
       </span>
