--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0313.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0313.html
@@ -174,11 +174,6 @@
             <ins class="alt" title="nlp 2.00">εἴτ᾿</ins>
           </span>
         </span>
-        <span id="w_32_1" class="ocr_word" title="bbox 108 533 198 586">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_33" class="ocr_word" title="bbox 241 554 293 584" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκ</ins>
@@ -226,7 +221,7 @@
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1609 534 1657 586" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δ’</ins>
+            <ins title="nlp 2.00">δ' οὖν</ins>
           </span>
         </span>
       </span>
@@ -278,7 +273,7 @@
         </span>
         <span id="w_52_1" class="ocr_word" title="bbox 1690 612 1787 665">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -409,11 +404,6 @@
             <ins class="alt" title="nlp 2.00">σόν”.</ins>
           </span>
         </span>
-        <span id="w_78_1" class="ocr_word" title="bbox 640 920 781 971">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_79" class="ocr_word" title="bbox 867 940 952 971" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
@@ -431,7 +421,7 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1492 946 1557 989" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὴ</ins>
+            <ins title="nlp 2.00">μὴ εἰδέναι</ins>
           </span>
         </span>
       </span>
@@ -765,11 +755,6 @@
             <ins class="alt" title="nlp 2.00">νυκτὸς</ins>
           </span>
         </span>
-        <span id="w_148_1" class="ocr_word" title="bbox 570 1544 846 1609">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_149" class="ocr_word" title="bbox 859 1585 871 1607">
           <span class="alternatives">
             <ins title="nlp 2.00">μελετήσειε,</ins>
@@ -787,7 +772,7 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1222 1551 1393 1593" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶσαν</ins>
+            <ins title="nlp 2.00">πᾶσαν ἀναλαβόμενοι</ins>
           </span>
         </span>
       </span>
