--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0456.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0456.html
@@ -151,9 +151,9 @@
             <ins class="alt" title="nlp 1.00">ἡμᾶς</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 1767 493 1880 538" lang="grc">
+        <span id="w_27_0" class="ocr_word" title="bbox 1767 493 1880 538">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἰκεῖθεν</ins>
+            <ins class="alt" title="nlp 2.00">ἐκεῖθεν</ins>
           </span>
         </span>
       </span>
@@ -242,16 +242,11 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1800 662 1894 708" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χω-</ins>
+            <ins title="nlp 2.00">χωρῆσαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 190 716 1895 787">
-        <span id="w_45" class="ocr_word" title="bbox 190 730 341 787" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρῆσαι</ins>
-          </span>
-        </span>
         <span id="w_46" class="ocr_word" title="bbox 378 740 466 770" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
@@ -638,14 +633,14 @@
             <ins class="alt" title="nlp 1.00">βασιλικὸν</ins>
           </span>
         </span>
-        <span id="w_121" class="ocr_word" title="bbox 1724 1361 1896 1392" lang="grc">
+        <span id="w_121_0" class="ocr_word" title="bbox 1724 1361 1896 1392">
           <span class="alternatives">
-            <ins title="nlp 2.00">κοιτω-</ins>
+            <ins class="alt" title="nlp 2.00">κοιτωνίσκον</ins>
           </span>
         </span>
-        <span id="w_122" class="ocr_word" title="bbox 1919 1368 1950 1400">
+        <span id="w_121_1" class="ocr_word" title="bbox 1724 1361 1896 1392">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -653,11 +648,6 @@
         <span id="w_123" class="ocr_word" title="bbox 127 1436 168 1469">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">15</ins>
-          </span>
-        </span>
-        <span id="w_124" class="ocr_word" title="bbox 191 1422 366 1472" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">νίσκον</ins>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 390 1418 755 1481" lang="grc">
