--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0314.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0314.html
@@ -739,12 +739,7 @@
         </span>
         <span id="w_139_0" class="ocr_word" title="bbox 891 1490 1041 1556">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἀνὴρ</ins>
-          </span>
-        </span>
-        <span id="w_139_1" class="ocr_word" title="bbox 891 1490 1041 1556">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">(ἀνὴρ </ins>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1079 1490 1133 1538" lang="grc">
@@ -764,7 +759,7 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1570 1510 1652 1540" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">καὶ φρονήσει</ins>
           </span>
         </span>
       </span>
@@ -977,14 +972,9 @@
             <ins class="alt" title="nlp 2.00">Μαΐου</ins>
           </span>
         </span>
-        <span id="w_184_1" class="ocr_word" title="bbox 1106 1879 1284 1926">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_185" class="ocr_word" title="bbox 1311 1878 1711 1940" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παριππεύοντος</ins>
+            <ins title="nlp 2.00">παριππεύοντος μηνός.</ins>
           </span>
         </span>
       </span>
@@ -1313,7 +1303,7 @@
         </span>
         <span id="w_250_1" class="ocr_word" title="bbox 1704 2442 1771 2471">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">ἂν Δνμοσθένης </ins>
           </span>
         </span>
       </span>
@@ -1326,11 +1316,6 @@
         <span id="w_254_0" class="ocr_word" title="bbox 697 2520 727 2563">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἢ</ins>
-          </span>
-        </span>
-        <span id="w_254_1" class="ocr_word" title="bbox 697 2520 727 2563">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 768 2519 850 2549" lang="grc">
@@ -1365,7 +1350,7 @@
         </span>
         <span id="w_261" class="ocr_word" title="bbox 1696 2495 1806 2548" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδ’</ins>
+            <ins title="nlp 2.00">οὐδ' ἂν</ins>
           </span>
         </span>
       </span>
