--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0457.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0457.html
@@ -68,9 +68,9 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 1716 349 1815 379" lang="grc">
+        <span id="w_11_0" class="ocr_word" title="bbox 1716 349 1815 379">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑτε-</ins>
+            <ins class="alt" title="nlp 2.00">ἑτερόστμα</ins>
           </span>
         </span>
       </span>
@@ -78,11 +78,6 @@
         <span id="w_12" class="ocr_word" title="bbox 62 421 96 453">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_13" class="ocr_word" title="bbox 121 397 332 467" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ρόστομα</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 391 401 508 465" lang="grc">
