--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0502.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0502.html
@@ -1201,9 +1201,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 143 2405 1849 2476">
-        <span id="w_232" class="ocr_word" title="bbox 322 2406 437 2457" lang="grc">
+        <span id="w_232_0" class="ocr_word" title="bbox 322 2406 437 2457">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὔτε</ins>
+            <ins class="alt" title="nlp 2.00">βαρος</ins>
+          </span>
+        </span>
+        <span id="w_232_1" class="ocr_word" title="bbox 322 2406 437 2457">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὔτε</ins>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 462 2405 654 2472" lang="grc">
@@ -1211,12 +1216,12 @@
             <ins title="nlp 2.00">Ἕλλην</ins>
           </span>
         </span>
-        <span id="w_234_0" class="ocr_word" title="bbox 682 2407 905 2473">
+        <span id="w_234_0_0" class="ocr_word" title="bbox 682 2407 905 2473">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(θάμβος</ins>
           </span>
         </span>
-        <span id="w_234_1" class="ocr_word" title="bbox 682 2407 905 2473">
+        <span id="w_234_0_1" class="ocr_word" title="bbox 682 2407 905 2473">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1234,11 +1239,6 @@
         <span id="w_237" class="ocr_word" title="bbox 1164 2414 1445 2474" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὀφθαλμῶν</ins>
-          </span>
-        </span>
-        <span id="w_238" class="ocr_word" title="bbox 1478 2407 1727 2476" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁρώμενος</ins>
           </span>
         </span>
       </span>
