--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0315.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0315.html
@@ -144,12 +144,7 @@
         </span>
         <span id="w_25_0" class="ocr_word" title="bbox 722 441 948 509">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(λογάδες</ins>
-          </span>
-        </span>
-        <span id="w_25_1" class="ocr_word" title="bbox 722 441 948 509">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">(λογάδες</ins>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 996 448 1129 494" lang="grc">
@@ -164,7 +159,7 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1398 466 1498 496" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">τῶν ἐπιφανῶν</ins>
           </span>
         </span>
       </span>
@@ -562,14 +557,9 @@
             <ins class="alt" title="nlp 2.00">ἂν</ins>
           </span>
         </span>
-        <span id="w_107_1" class="ocr_word" title="bbox 1259 1218 1326 1269">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_108" class="ocr_word" title="bbox 1362 1217 1657 1271" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπονεύσειε</ins>
+            <ins title="nlp 2.00">ἀπονεύσειε τῶν</ins>
           </span>
         </span>
       </span>
@@ -841,11 +831,6 @@
             <ins class="alt" title="nlp 2.00">Φιλιππούπολιν</ins>
           </span>
         </span>
-        <span id="w_162_1" class="ocr_word" title="bbox 224 1762 622 1811">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_163" class="ocr_word" title="bbox 658 1761 955 1825" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">καταλαβὼν</ins>
@@ -868,7 +853,7 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1696 1768 1786 1811" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins title="nlp 2.00">τοῦ 20</ins>
           </span>
         </span>
       </span>
@@ -910,11 +895,6 @@
             <ins class="alt" title="nlp 2.00">δουκὸς</ins>
           </span>
         </span>
-        <span id="w_175_1" class="ocr_word" title="bbox 101 1918 280 1977">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_176" class="ocr_word" title="bbox 323 1918 606 1984" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Δυρραχίου</ins>
@@ -937,7 +917,7 @@
         </span>
         <span id="w_180" class="ocr_word" title="bbox 1219 1934 1302 1965" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins title="nlp 2.00">τοῦ σεβαστοκράτορος</ins>
           </span>
         </span>
       </span>
